@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>560</width>
-    <height>395</height>
+    <height>427</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -52,7 +52,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>360</y>
+     <y>390</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -71,7 +71,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>360</y>
+     <y>390</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -194,7 +194,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>330</y>
+     <y>360</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -227,7 +227,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>330</y>
+     <y>360</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -266,7 +266,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>180</y>
+     <y>210</y>
      <width>501</width>
      <height>151</height>
     </rect>
@@ -419,40 +419,72 @@
      </property>
     </item>
    </widget>
+   <widget class="QLabel" name="labelfs">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>120</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>file system</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelrng">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>120</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>random number generator</string>
+    </property>
+    <property name="text">
+     <string>rng</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
-  <widget class="QLabel" name="labelrng">
+  <widget class="QComboBox" name="comboBoxOptions">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>300</y>
-     <width>151</width>
+     <x>90</x>
+     <y>180</y>
+     <width>391</width>
      <height>31</height>
     </rect>
    </property>
-   <property name="toolTip">
-    <string>random number generator</string>
-   </property>
-   <property name="text">
-    <string>rng</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="labelfs">
+  <widget class="QLabel" name="labelvolumeOptions">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>300</y>
-     <width>151</width>
+     <x>20</x>
+     <y>390</y>
+     <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>file system</string>
+    <string>volume options</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
