@@ -194,3 +194,4 @@ version 4.7.3
 -- show devices even when they have neither partitions nor recognizable file systems.This is useful for TrueCrypt system volumes or
    normal TrueCrypt volumes that are not in partitions.
 -- add an ability to change TrueCrypt volume key.
+-- add ability to create volumes with different crypto options
